--- a/hugo.yaml
+++ b/hugo.yaml
@@ -14,15 +14,18 @@ outputs:
 
 Paginate: 3
 enableRobotsTXT: true
-# disqusShortname: your-disqus-shortname
-# googleAnalytics: G-MEASUREMENT_ID
 
 markup:
   goldmark:
     renderer:
       unsafe: true
 
-        #Menus:
+Menus:
+  main:
+    - identifer: blog
+      name: Blog
+      title: Blog Posts
+      url: /blog
     #Dropdown menu
     # - identifier: dropdown
     #   title: Example dropdown menu
@@ -52,11 +55,6 @@ params:
   # Note the lack of "" in true, it should be of boolean type.
   useBootstrapCDN: false
 
-  # If you want to load dynamically responsive images from Cloudinary
-  # This requires your images to be uploaded + hosted on Cloudinary
-  # Uncomment and change YOUR_CLOUD_NAME to the Cloud Name in your Cloudinary console
-  # cloudinary_cloud_name: "YOUR_CLOUD_NAME"
-  
   # Whether to add mathjax support on all pages. Alternatively, you can opt-in per page by adding `mathjax: true` in the frontmatter.
   mathjax: false
 
@@ -116,7 +114,7 @@ params:
     title: "Warren."
     subtitle: "I build things"
     content: "A passionate developer. I like to make use of low-spec and resource-limited systems to make interesting, often artistic, projects."
-    image: /jericho-brown-tradition-poe-4203657683.jpeg
+    image: /headshot.jpeg
     bottomImage:
       enable: true
       roundImage: true # Make hero image circular | default false
@@ -135,16 +133,23 @@ params:
   about:
     enable: true
     title: "About Me"
+    content: |-
+      I'm a software engineer with a strong background in digital logic and computer architecture.
+
+      I have an interest in the intersection of technology and social justice. 
     skills:
       enable: true
-      title: "Here are a few technologies I've been working with recently:"
+      title: "Skills"
       items:
         - "Node.js"
         - "Javascript"
         - "TypeScript"
         - "Go"
+        - "C"
         - "C++"
         - "Arduino"
+        - "Jira"
+        - "Git"
 
   # Experience
   experience:
@@ -159,37 +164,40 @@ params:
           enable: true
           name: "View the project"
           url: "https://github.com/mongodb/node-mongodb-native"
-        content: "I am currently working as a software developer at [MongoDB](https://www.mongodb.com/) in New York, NY. I am currently working on the Node.js driver, specifically focusing on our serialization layer."
+        content: |
+          I am currently working as a software developer at [MongoDB](https://www.mongodb.com/) in New York, NY. I work on the Node.js driver, with particular focus on our [BSON serialization layer](https://github.com/mongodb/js-bson).
+          #### Achievements
+
+          - Created bespoke tooling to track performance of driver on a continuous basis, enabling the team to quickly and accurately identify and address performance regressions
+          - Spearheaded implementation of driver logging functionality
 
       - job: "Software Engineering Intern"
-        company: "MongoDB internship"
+        company: "MongoDB - SWE internship"
         companyUrl: "https://www.mongodb.com/"
         date: "Jan 2020 - Aug 2020"
         info:
           enable: false
         featuredLink:
           enable: false 
-          url: "https://example.com"
         content: |
-          I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. I am currently working on a project that will be used to help people find the best way to get around the city.
-
-          - Lead backend developer for a product.
-          - Created a frontend design for a product.
+          - Collaborated with the Node.js driver team on a summer-long porject to retool the errors emitted by the library, improving the developer experience
+          - Tracked down and fixed bugs in production Typescript code
+          - Wrot unit and integration tests using the Mocha testing framework
 
       - job: "Learning Path Intern"
-        company: "MongoDB"
+        company: "MongoDB - Learning Path internship"
         companyUrl: "https://www.mongodb.com/"
         date: "Jan 2020 - Aug 2020"
         info:
           enable: false
         featuredLink:
           enable: false 
-          url: "https://example.com"
         content: |
-          I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. I am currently working on a project that will be used to help people find the best way to get around the city.
-
-          - Lead backend developer for a product.
-          - Created a frontend design for a product.
+          - One of 13 rising juniors in an intern class of over 80 students
+          - Participated in 8 week technical program, attaining MongoDb developer certification using Python and the Mongo Shell
+          - Participated in collaborative team project using the Fask web framework and Pymongo database driver
+          - Shadowed engineers on a number of different teams
+          - Worked on Jira tickets to understand development best practices, methodologies and workflows
 
   # Education
   education:
@@ -200,43 +208,32 @@ params:
       - title: "Bachelor's of Science in Electrical and Computer Engineering"
         school:
           name: "Princeton University"
-          url: "https://princeton.edu"
+          url: "https://ece.princeton.edu"
         date: "2018 - 2022"
-        GPA: "3.8 out of 5.0"
+        GPA: "3.069 out of 4.0"
         content: |-
-          Extracurricular Activities
-            - Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            - Tempora esse, eaque delectus nulla quo doloribus itaque expedita alias natus optio totam maxime nihil excepturi velit a animi laborum hic similique.
+          ##### Relevant Coursework
+            - COS320 - Compiling Techniques
+              - Wrote a small optimizing compiler for a bespoke programming language in OCaml
+            - COS 318 - Operating Systems
+              - Worked with a team to write a small preemptive kernel that handles keyboard input
+
+          ##### Lab/Project classes
+            - ECE302 - Robotics and Autonomous Systems Lab
+              - Worked with a teammate to design and build an autonomous model car to achieve a a number of technical requirements including maintaining constant speed down a slope and accurately following a line
 
   # Achievements
   achievements:
     enable: false 
     # title: "Custom Name"
-    items:
-      - title: Google kickstart runner
-        content: I solved all problems with optimal solution.
-        url: https://example.com
-        image: /images/achievment.jpg
-      - title: Facebook Hackathon Winner
-        content: Developed a product using Artificial Intelligence.
-        image: /images/achievment.jpg
-      - title: Hugo Profile
-        content: Developed a theme and getting 1K+ downloads per month.
-        url: "https://github.com/gurusabarish/hugo-profile"
-        image: /images/achievment.jpg
-      - title: Microsoft Imagine Runner
-        content: We are developed a product which can help others.
-      - title: Google Summer of Code
-        content: Contributed to a open source project.
-        url: https://example.com
+    # items:
 
   # projects
   projects:
     enable: true
-    # title: "Custom Name"
+    title: "Personal Projects"
     items:
       - title: Networked Lights
-        content: A highly customizable and mobile first Hugo template for personal portfolio and blog.
         content: ESP-32 based browser-configurable light display
         badges:
           - "Arduino"
@@ -248,6 +245,15 @@ params:
           - icon: fab fa-github
             url: https://github.com/W-A-James/NetworkedLights
 
+      - title: Pico Life
+        content: A Game of Life implementation hooked up to a traditionally multiplexed 8x8 LED matrix
+        badges:
+          - "C"
+          - "Embedded"
+          - "Hardware"
+        links:
+          - icon: fab fa-github
+            url: https://github.com/W-A-James/pico-8x8-life
 
       - title: MIPSView
         content: An interactive web-based simulator of the MIPS R2000 microprocessor
@@ -257,7 +263,7 @@ params:
           - "Javascript"
         links:
           - icon: fab fa-github
-            url: https://github.com/gurusabarish/converter
+            url: https://github.com/W-A-James/MIPSView_v2
 
       - title: Cellular
         content: A CLI tool for generating gifs of elementary cellular automata
@@ -284,10 +290,10 @@ params:
 
   footer:
     recentPosts:
-      path: "blogs"
+      path: "blog"
       count: 3
       title: Recent Posts
-      enable: true
+      enable: false 
       disableFeaturedImage: false
     socialNetworks:
       github: https://github.com/W-A-James
