--- a/hugo.yaml
+++ b/hugo.yaml
@@ -294,11 +294,9 @@ params:
       count: 3
       title: Recent Posts
       enable: false 
-      disableFeaturedImage: false
+      disableFeaturedImage: true 
     socialNetworks:
       github: https://github.com/W-A-James
-      linkedin: https://linkedin.com
-      twitter: https://twitter.com
 
   # List pages like blogs and posts
   listPages:
