update networked lights tags

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -248,6 +248,7 @@ params:
           - "C++"
           - "Node.js"
           - "TypeScript"
+          - "React"
           - "Hardware"
         links:
           - icon: fab fa-github
